--- a/appbajar-lib/build.gradle
+++ b/appbajar-lib/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: "com.jfrog.bintray"
 
 android {
-    compileSdkVersion "Google Inc.:Google APIs:23"
-    buildToolsVersion '23.0.0'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 14
@@ -20,8 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.code.gson:gson:2.3.+'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.code.gson:gson:2.3.+'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+
 }
 
 def binTrayVersion = '1.0.2' // TODO - for each update
@@ -86,5 +88,5 @@ bintray {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.4'
+    gradleVersion = '4.4'
 }
